Product.Quantity can now be managed by Admin. Cart quantity is now editable, but still needs hooked up to UpdateQuantity(). Orders now correctly modify Product.Quantity. Deleting cart items now results in the removal of the entire BasketItem record instead of setting BasketItem.BasketId equal to NULL.

--- a/Noetic/Noetic.Core/Noetic.Core.csproj
+++ b/Noetic/Noetic.Core/Noetic.Core.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="_Notes\DataAnnotationNotes.txt" />
+    <Content Include="_Notes\ToDoNotes.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
